# packingcubes

./: .gitignore  .gitlint  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  comparison-benchmark.yml  dependabot.yml  pypi-publish.yml  ruff.yml
benchmarks/: comparallel.options  comparison.options  regression.options
benchmarks/data/: comparison_ci.json  comparison_devtop_t8.json  comparison_stampede3.json  names.json  parallel_devtop.json  parallel_stampede3.json
benchmarks/performance/: __init__.py  _json_parsing.py  benchmark_properties.py  brute.py  cubes.py  octree.py  optree.py  packed_tree.py  plot_timings.py  scipy.py  timing.py
doc/: packed_format.md
docs/: Citations.md  Developer-Guide.md  GettingStarted.md  Installation.md  index.md  packed_format.md  packingcubes.md
docs/API/: Data-Objects.md  Packed Trees.md
docs/API/Numba/: Cubes.md
docs/Users-Guide/: index.md
docs/Users-Guide/Explanations/: Benchmarks.md  HeapQueries.md  ParallelChunking.md  index.md
docs/Users-Guide/Recipes/: Cookbook.md  JittedCode.md  TempVsRadii_Direct.md  TempVsRadii_SearchObj.md  index.md
docs/Users-Guide/Reference/: CLI.md  Cubes.md  Data-Objects.md  Packed-Trees.md  Tree-Visualization.md  index.md  packed_format.md
docs/Users-Guide/Reference/Numba/: Bounding-Volumes.md  Cubes.md  DataContainers.md  PackedTree.md
docs/Users-Guide/Tutorials/: ParticlesWithinShape.md  Working_with_datasets.md  index.md
examples/: Basic_Usage.py  Benchmarking.py  Example_PackedTree.py  Profiling.py  demo.py  timing_tests.py  timing_tests.sh
packingcubes/: __init__.py  bounding_box.py  configuration.py  cubes.py  data_objects.py  demo.py  octree.py  packed_tree.py  tree_vis.py
packingcubes/cubes/: __init__.py  cubes_creation.py  cubes_numba.py  multi_cubes.py  particle_cubes.py
packingcubes/packed_tree/: __init__.py  fixed_distance_heap.py  kdtree.py  optree.py  packed_node.py  packed_tree.py  packed_tree_meta.py  packed_tree_numba.py
tests/: conftest.py  test_bounding_box.py  test_data_objects.py  test_kdtree.py  test_octree.py  test_optree.py
tests/performance/: brute.py  cubes.py  json_parsing.py  kdtree.py  octree.py  packed_tree.py  plot_timings.py  scipy.py  timing.py
