[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1",
]

[project]
name = "packingcubes"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "h5py",
    "numba",
    "xxhash>=3.6.0,<4",
]
authors = [
    {name = "Michael Ryan"},
    {name = "Josh Borrow", email="josh@joshborrow.com"}
]
description="PackingCubes octree implementation for astro data"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics"]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version","readme"]

[project.urls]
home = "https://github.com/astrosocket/packingcubes"
source = "https://github.com/astrosocket/packingcubes"
issues = "https://github.com/astrosocket/packingcubes/issues/new"

[project.optional-dependencies]
viz = [
    "matplotlib", "pygfx", "rendercanvas", "pyside6",
]
jupyter = [
    "jupyter-rfb",
]
benchmark = ["scipy", "unyt"]
all = ["packingcubes[viz]", "packingcubes[jupyter]", "packingcubes[benchmark]"]


[dependency-groups]
test = [
    "pytest",
    "hypothesis"
]
profile = [
    "pyinstrument", "scalene>=1.5.55,<2", "profila>=0.3.2,<0.4",
]
jupyter = [
    "ipywidgets",
    "ipykernel",
    "ipympl",
]
build = ["setuptools", "wheel>=0.46.3,<0.47", "build>=1.4.0,<2", "setuptools-scm", "twine"]
dev = [
    "ruff",
    "pre-commit",
    "coverage",
    "pytest-cov",
    "mypy",
    "packingcubes[all]",
    {include-group = "test"},
    {include-group = "profile"},
    {include-group = "jupyter"},
]

[project.scripts]
packcubes = "packingcubes.cubes.__main__:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # additional flake8
    "FBT","C","A","FA","ICN","LOG","T","PT","Q","RET",
    # isort
    "I",
    # McCabe Complexity
    "C90",
    # numpy
    "NPY",
    # Docstrings - not yet ready
    # "D",
]
ignore = ["F841", "SIM300"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = [
    "packingcubes",
]
omit=[
    "packingcubes/_version.py",
]

[tool.coverage.report]
skip_empty = true

[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
packingcubes = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["test","viz","jupyter","dev","profile"], solve-group = "default" }
test = { features = ["test","viz", "jupyter"], solve-group = "default" }
viz = { features = ["viz", "jupyter"], solve-group = "default" }
jupyter = { features = ["jupyter"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
test = "pytest --cov=packingcubes"

[tool.pixi.feature.dev.dependencies]
pytest-cov = ">=7.0.0,<8"
ruff = ">=0.14.8,<0.16"
pre-commit = ">=4.5.0,<5"
coverage = ">=7.12.0,<8"
mypy = ">=1.19.0,<2"
scipy = ">=1.16.3,<2"
yt = ">=4.4.2,<5"
pykdtree = ">=1.4.3,<2"

[tool.pixi.feature.test.dependencies]
pytest = "*"
hypothesis = ">=6.148.6,<7"

[tool.pixi.feature.profile.dependencies]
pyinstrument = ">=5.1.1,<6"
pympler = ">=1.1,<2"

[tool.pixi.feature.viz.dependencies]
matplotlib = "*"
pygfx = ">=0.15.3,<0.16"
wgpu-py = ">=0.29.0,<0.30"
rendercanvas = ">=2.5.1,<3"
pyside6 = ">=6.10.1,<7"

[tool.pixi.feature.jupyter.dependencies]
ipykernel = ">=7.1.0,<8"
ipympl = ">=0.9.8,<0.10"
ipywidgets = ">=8.1.8,<9"
jupyter-rfb = ">=0.5.4,<0.6"

[tool.pixi.feature.build.dependencies]
twine = ">=6.2.0,<7"

[tool.pixi.dependencies]
numpy = "*"
h5py = ">=3.15.1,<4"
unyt = ">=3.0.4,<4"
numba = ">=0.63.0,<0.64"
xxhash = ">=0.8.3,<0.9"
